--- a/.config/waybar/themes/monochrome.css
+++ b/.config/waybar/themes/monochrome.css
@@ -1,14 +1,15 @@
 @define-color background #1e1e2e;
 @define-color background-alt #313244;
-@define-color foreground #cdd6f4;
+@define-color foreground #dddddd;
+/* @define-color foreground #cdd6f4; */
 @define-color foreground-alt #a6adc8;
 
 @define-color warning #ffcc00;
 @define-color critical #ff0000;
-@define-color good @forground-alt;
+@define-color good #dddddd;
 
 /* Module Colors (All Shades of Grey) */
-@define-color scratchpad #999999;
+@define-color scratchpad #cccccc;
 @define-color disk #aaaaaa;
 @define-color cpu #bbbbbb;
 @define-color memory #cccccc;
@@ -17,4 +18,4 @@
 @define-color pulseaudio #bbbbbb;
 @define-color backlight #cccccc;
 @define-color battery #dddddd;
-@define-color clock #ffffff;
+@define-color clock #dddddd;
