new waybar style

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import "themes/mocha.css";
 
 * {
-  background-color: @background;
+  background-color: transparent;
   color: @foreground;
 
   border: none;
@@ -22,9 +22,11 @@
 
 #workspaces button {
   all: initial;
-  padding: 0 6px;
+  padding: 0 8px;
   margin: 0 1.5px;
   min-width: 9px;
+  background-color: @background;
+  border-radius: 6px;
 }
 
 #workspaces button.empty {
@@ -46,7 +48,11 @@
 #custom-logo,
 #custom-power {
   min-width: 12px;
-  margin: 0 7.5px;
+  /* margin: 0 7.5px; */
+  margin: 0 3px;
+  background-color: @background;
+  padding: 2px 8px;
+  border-radius: 6px;
 }
 
 tooltip {
