--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -7,7 +7,7 @@
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: "JetBrainsMono Nerd Font";
+  font-family: "JetBrainsMono Nerd Font", monospace;
   font-size: 15px;
   font-weight: bold;
 }
