chore(config): update dotfiles configurations
- change i3 wallpaper to ign_sunGarden
- adjust kitty font size, padding, and opacity
- update nvim lazy-lock.json plugins
- modify telescope plugin no_ignore settings
- add obsidian second brain agent config
- update backend-developer agent mode
- tweak opencode.json formatting
- comment out lockscreen code in rofi powermenu
- update sway config, keybindings, outputs, and startup
- comment out waybar backlight and pulseaudio modules
- adjust waybar style background color

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import "themes/tokyonight.css";
 
 * {
-  /* background-color: @background; */
+  /* background-color: @foreground; */
   color: @foreground;
 
   border: none;
